# LeadGenerator

./: .env  .gitignore  config_llm.yaml  pyproject.toml  run.sh
src/: app.py
src/agents/: base_agent.py  categorization_agent.py  classification_agent.py  needs_agent.py  security_agent.py  security_analysis_agent.py  website_agent.py
src/analise-empresas/: __init__.py  main.py
src/config/: __init__.py  environments.py  settings.py
src/domain/: __init__.py  entities.py  models.py
src/infrastructure/: __init__.py  data_loader.py
src/orchestration/: security_workflow.py
src/pages/: 02_Upload_Data.py  03_Website_Analyzer.py  03_🧙‍♂️Website_Analyzer.py  04_🧬Social_Media_Analyzer.py
src/services/: check_ssl_certificate.py  check_valid_url.py
src/services/security/: __init__.py  cms_detector.py  cookie_checker.py  exposed_files_checker.py  headers_checker.py  protocol_checker.py  ssl_checker.py  vulnerability_checker.py
src/ui/: __init__.py  company_details.py  company_selector.py  pagesEnum.py  sidebar.py  upload_data.py  website_analysis.py
src/ui/website_analysis/: website_analysis_ui.py
src/ui/website_analysis/security/: _render_details.py  _render_llm_section.py  _render_metrics.py  _render_security_header.py
